--- a/src/components/css/signup.css
+++ b/src/components/css/signup.css
@@ -209,8 +209,8 @@
     }
 
     .signup-form input:invalid {
-        width: 19rem;
-        height: 100%;
+        width: 100%;
+        height: 3rem;
         background-color: var(--blue);
         border: 2px solid var(--pink);
         border-radius: 1.5rem;
@@ -233,8 +233,8 @@
     }
 
     .signup-form button:hover {
-        width: 8.75rem;
-        height: 100%;
+        width: 100%;
+        height: 3rem;
         background-color: transparent;
         border: 2px solid var(--mint);
         color: var(--white);
